# BuildingGuessr

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml  ruff.toml
.cursor/rules/: general.mdc
.github/workflows/: ci.yml
docs/: ML_System_Design.md
libs/geocoder/: pyproject.toml
libs/geocoder/src/geocoder/: __init__.py  geocoder.py
libs/milvus-client/: pyproject.toml
libs/milvus-client/src/milvus_client/: __init__.py
libs/preprocessing/: pyproject.toml
libs/preprocessing/src/preprocessing/: __init__.py  preprocessing.py
libs/triton-client/: README.md  pyproject.toml
libs/triton-client/src/triton_client/: __init__.py  http_client.py
libs/triton-client/src/triton_client/cli/: send_fake_detection.py
services/api/: Dockerfile  README.md  pyproject.toml
services/api/src/api/: __init__.py  app.py  image_ops.py  schemas.py  settings.py  storage_s3.py  vector_db.py
services/detector-api/: Dockerfile  pyproject.toml
services/detector-api/src/detector_api/: __init__.py  app.py
services/pr-api/: Dockerfile  pyproject.toml
services/pr-api/src/pr_api/: __init__.py  app.py
services/triton/: README.md
