[project]
name = "milvus-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pymilvus>=2.6.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
