[project]
name = "preprocessing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Georgiy2035", email = "soblin1@rambler.ru" }
]
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
]

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
