[project]
name = "triton-client"
version = "0.1.0"
description = "Thin Triton client library"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" },
    { name = "Georgii Kartashov" },
    { name = "Timophey Kondrashov" },
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.3",
    "tritonclient[http]>=2.60.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
