[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
