[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "pydantic>=2.11.9",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
]

[project.scripts]
api = "api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
