[project]
name = "detector-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.12, <3.13"
dependencies = [
    "fastapi>=0.117.1",
    "python-multipart>=0.0.20",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "ultralytics>=8.3.204",
    "uvicorn>=0.37.0",
]

[project.scripts]
detector-api = "detector_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu121"
