[project]
name = "pr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
pr-api = "pr_api:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
