[project]
name = "pr-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alexander Melekhin", email = "amelekhin96@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pillow",
    "torch",
    "torchvision",
]

[project.scripts]
pr-api = "pr_api.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
